WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234608
[LFC][IFC] Soft linebreaks have incorrect bidi paragraph positions
https://bugs.webkit.org/show_bug.cgi?id=234608
Summary
[LFC][IFC] Soft linebreaks have incorrect bidi paragraph positions
alan
Reported
2021-12-22 09:56:27 PST
ssia
Attachments
Patch
(3.64 KB, patch)
2021-12-22 10:03 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-12-22 10:03:30 PST
Created
attachment 447812
[details]
Patch
EWS
Comment 2
2021-12-22 13:04:55 PST
Committed
r287370
(
245511@main
): <
https://commits.webkit.org/245511@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 447812
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-12-22 13:05:18 PST
<
rdar://problem/86822998
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug