[LFC][IFC] Soft linebreaks have incorrect bidi paragraph positions https://bugs.webkit.org/show_bug.cgi?id=234608

Reviewed by Antti Koivisto.

Soft linebreaks are part of the InlineTextBox content and they are appened to the bidi paragraph
together with the rest of the text content (as we append the InlineTextBox content in one block).
We need to handle their positions the same way we do with regular text content i.e. use the inline item's offset
and not the paragraphContentBuilder's length.

* layout/formattingContexts/inline/InlineItemsBuilder.cpp:
(WebCore::Layout::buildBidiParagraph):



Canonical link: https://commits.webkit.org/245511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287370 268f45cc-cd09-0410-ab3c-d52691b4dbfc